ui-ux: Fix spacings between homepage sections

--- a/css/components/_blog.scss
+++ b/css/components/_blog.scss
@@ -5,7 +5,7 @@
     .blog-list {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-        grid-gap: 1.5rem;
+        grid-gap: 1rem;
 
         article {
             width: 100%;
@@ -64,7 +64,7 @@
                                 text-transform: uppercase;
                                 border: 2px solid #f9f9f9;
                                 border-radius: 2rem;
-                                padding: .2rem .5rem .2rem;
+                                padding: .25rem .5rem;
 
                                 &:hover {
                                     border-color: #444;
