--- a/css/components/_testimonials.scss
+++ b/css/components/_testimonials.scss
@@ -17,7 +17,7 @@
             .inner {
                 background: #fff;
                 padding: 1rem;
-                margin: 0 4% 4%;
+                margin: 0 1% -3%;
                 border: 1px solid #f1f2f4;
                 transition: all 300ms ease-in-out;
 
@@ -35,6 +35,10 @@
 
         @media all and (min-width: 860px) {
             column-count: 2;
+
+            .inner {
+                margin: 0 1% -5%;
+            }
         }
 
         @media all and (min-width: 1200px) {
